--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "web/ligolo-ng-web"]
-	path = web/ligolo-ng-web
-	url = https://github.com/nicocha30/ligolo-ng-web
+[submodule "web/pivot-web"]
+	path = web/pivot-web
+	url = https://github.com/lazytitan33/pivot-web
